phase2_Dev/src/objects/Licensing_Transaction__c.object
<CustomObject>
    <fields>
        <fullName>IsAssistantUpgradeToCertified__c</fullName>
        <description>Checks if the Assistant / Provider is attempting an upgrade to a Certified Assistant</description>
        <formula>(ISPICKVAL(Provider__r.Certified_As__c , &apos;Regular Assistant&apos;) || ISBLANK(TEXT(Provider__r.Certified_As__c)) ||  Provider__r.RecordType.Name = &apos;Family Child Care&apos;) &amp;&amp;  !ISPICKVAL(License_Requested__c, &apos;Regular Assistant&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsAssistantUpgradeToCertified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsProviderUpgrade__c</fullName>
        <description>Checks if a Provider is trying to upgrade their license</description>
        <formula>(!ISPICKVAL(License_Requested__c, &apos;Up to 6 Children&apos;) &amp;&amp; !ISBLANK(TEXT(License_Requested__c)))
&amp;&amp;
(ISPICKVAL(Provider__r.License_Type__c, &apos;Up to 6 Children&apos;) || ISBLANK(TEXT(Provider__r.License_Type__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsProviderUpgrade</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Not_Blank_Submission_Date__c</fullName>
        <description>Temporary field added for testing...delete after testing</description>
        <formula>NOT( ISBLANK( Submission_Date__c ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Not Blank Submission Date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Not_Blank_Submitter__c</fullName>
        <description>Temp field for testing....delete after testing complete</description>
        <formula>NOT( ISBLANK( Submitter__r.Id ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Not Blank Submitter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Renewal_Transaction__c</fullName>
        <formula>IF(  RecordType.Name = &quot;FCC Renewal&quot;, TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Renewal Transaction</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_your_program_contracted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is your program contracted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Kindergarten_Capacity__c</fullName>
        <label>Kindergarten Capacity</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Kindergarten_Responsible__c</fullName>
        <label>Kindergarten Responsible</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Reached_Step__c</fullName>
        <inlineHelpText>Last steps reached by Portal User.</inlineHelpText>
        <label>Last Reached Step</label>
        <picklist>
            <picklistValues>
                <fullName>Instructions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transaction / Provider Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Household Members</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>License Status and Capacity / Assistant Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EEC Involvement Experience &amp; Professional Exp.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Background Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indoor / Outdoor space information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daily Routing Activities / Technical Assistance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attachments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Review Summary and Submission</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Licensing Status and Capacity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assistant Information</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Last_Renewal_Meeting_Attended_Date__c</fullName>
        <formula>Provider__r.Renewal_Meeting_attended_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Renewal Meeting Attended Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lead_Paint_Compliance__c</fullName>
        <description>Lead Paint: Constructed post 1978</description>
        <globalPicklist>Yes_No</globalPicklist>
        <label>Lead Paint Compliance</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lead_Paint_Detailed_Inspection__c</fullName>
        <description>Indoor Space / Building Details--&gt;Lead Paint Detailed Inspection</description>
        <globalPicklist>Yes_No</globalPicklist>
        <label>Lead Paint Detailed Inspection</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Legacy_System_Transaction_Number__c</fullName>
        <label>Legacy System Transaction Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Transaction_Type__c</fullName>
        <label>Legacy Transaction Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level_of_care__c</fullName>
        <label>Level of care</label>
        <picklist>
            <picklistValues>
                <fullName>Transition to Independent Living</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shelter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Group Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Residential School/ 766</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DYS Staff Secure Treatment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Secure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NONE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Residential School / Own School (not 766)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Teen Parent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DYS Hardware Secure Treatment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DYS Transition to Independent Living​​</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DCF Foster Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DYS Foster Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contracted CFC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Short Term Transitional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>​International</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Domestic Infant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DCF/Special Needs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>STARR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CBAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TCU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Respite</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DYS Detention</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DYS Assessment​​</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shelter Home</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>License_Expiration_Date__c</fullName>
        <label>License Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>License_Issue_Date__c</fullName>
        <label>License Issue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>License_Issued__c</fullName>
        <defaultValue>false</defaultValue>
        <label>License Issued</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>License_Requested__c</fullName>
        <label>License Requested</label>
        <picklist>
            <picklistValues>
                <fullName>Regular Assistant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Up to 6 Children</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Up to 8 Children; 2 School Aged</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Up to 10 Children</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Certified Family Child Care Assistant (6)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Certified Family Child Care Assistant (8)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Certified Family Child Care Assistant (10)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>License_Type__c</fullName>
        <label>License Type</label>
        <picklist>
            <picklistValues>
                <fullName>Regular</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Probationary</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Licensee_BRC_Consent_Request_Date__c</fullName>
        <inlineHelpText>Date the electronic version of Tax Certification Statement was first requested</inlineHelpText>
        <label>Licensee BRC Consent Request Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Licensee_BRC_Consent_Signed_Date__c</fullName>
        <inlineHelpText>Date / Time the BRC consent of the licensee was signed</inlineHelpText>
        <label>Licensee BRC Consent Signed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Licensee_BRC_Consent_Status__c</fullName>
        <inlineHelpText>Status of the licensee BRC Consent form (if electronic signature is used, this field is updated automatically)</inlineHelpText>
        <label>Licensee BRC Consent Status</label>
        <picklist>
            <picklistValues>
                <fullName>Sent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Created</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delivered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Licensee_BRC_Done__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Licensee BRC Done</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Licensee_CORI_Reception_Date__c</fullName>
        <label>Licensee CORI Reception Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Licensee_CORI_Result__c</fullName>
        <label>Licensee CORI Result</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved after discretionary review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denied</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Licensee_DCF_Reception_Date__c</fullName>
        <label>Licensee DCF Reception Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Licensee_DCF_Result__c</fullName>
        <label>Licensee DCF Result</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved after discretionary review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denied</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Licensor_Re_assignment_Needed_for_Region__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If transaction type == &quot;Change of Address&quot; &amp;&amp; Region for new address != Region for previous address &amp;&amp; Region of current assigned licensor != Region for new address&quot; then this checkbox should be checked on submission of transaction</description>
        <label>Licensor Re-assignment Needed for Region</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Licensor_Re_assignment_for_Region_Change__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Licensor Re-assignment for Region Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>List_of_Missing_Mandatory_Document__c</fullName>
        <inlineHelpText>List of all mandatory documents not yet attached to the transaction.</inlineHelpText>
        <label>List of Missing Mandatory Document</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>List_of_Rejected_Document_Not_Submitted__c</fullName>
        <inlineHelpText>List of all documents rejected by EEC that have not been yet reviewed and submitted again by provider.</inlineHelpText>
        <label>List of Rejected Document Not Submitted</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Live_at_New_Address__c</fullName>
        <label>Live at New Address</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Locked_facility__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Locked facility?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Maximum_Age_Limit_Requested_Months__c</fullName>
        <label>Maximum Age Limit Requested - Months</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Maximum_Age_Limit_Requested_Years__c</fullName>
        <label>Maximum Age Limit Requested - Years</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Maximum_age_of_children_served__c</fullName>
        <label>Maximum age of children served</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Medical_Emergency_Steps__c</fullName>
        <inlineHelpText>What steps would you take in a medical emergency if something happened to you, the educator, a child care child, or an immediate family member?</inlineHelpText>
        <label>Medical Emergency Steps</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Medication_Administration_Training_Cert__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Checked if the Medication Administration Training Certificate has been uploaded.</inlineHelpText>
        <label>Medication Administration Training Cert</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Minimum_Age_Limit_Requested_Months__c</fullName>
        <label>Minimum Age Limit Requested - Months</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Minimum_Age_Limit_Requested_Years__c</fullName>
        <label>Minimum Age Limit Requested - Years</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Minimum_age_of_children_served__c</fullName>
        <label>Minimum age of children served</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MissingElementsUpdateNoDisplay__c</fullName>
        <label>MissingElementsUpdateNoDisplay</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Missing_Elements_For_Closing_Part_1__c</fullName>
        <formula>IF( NOT(OR(ISPICKVAL(Status__c , &quot;Under Review&quot;), ISPICKVAL(Status__c , &quot;Approved By Manager&quot;))), &quot;Status Incorrect - &quot;, &quot;&quot;) 
&amp; 
IF ( Fee_Paid__c = FALSE, &quot;Fee Not Paid - &quot;, &quot;&quot;) 
&amp; 
IF ( AND ( Approved_by_Manager__c = FALSE, OR( RecordType.Name = &quot;FCC New License&quot; , AND ( RecordType.Name = &quot;FCC Renewal&quot;, TODAY() &gt;= Provider__r.Renewal_date__c ), Assigned_To__r.Need_Supervisor_Approval__c = TRUE, Other_Condition__c = TRUE)), &quot;Need Manager Approval - &quot;, &quot;&quot; ) 
&amp; 
IF( OR( RecordType.Name = &quot;FCC New License&quot; , RecordType.Name = &quot;FCC Renewal&quot;, RecordType.Name = &quot;FCC License Upgrade&quot;), 

IF ( ISPICKVAL(License_Requested__c ,&quot;&quot;), &quot;License Requested not filled - &quot;,&quot;&quot;) 
&amp; 
IF(  ISPICKVAL( License_Type__c ,&quot;&quot;), &quot;License Type not filled - &quot;,&quot;&quot;) 
&amp; 
IF( ISBLANK( License_Issue_Date__c ), &quot;License Issue Date not filled - &quot;,&quot;&quot;),&quot;&quot;
)</formula>
        <label>Missing Elements For Closing Part 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Missing_Elements_For_Closing__c</fullName>
        <formula>Missing_Elements_For_Licensor__c</formula>
        <inlineHelpText>List of items that are not met before the transaction can be processed and closed</inlineHelpText>
        <label>Missing Elements For Finalizing</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Missing_Elements_For_Finalizing__c</fullName>
        <label>Missing Elements For Finalizing</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Missing_Elements_For_Licensor_2__c</fullName>
        <label>Missing Elements For Licensor</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Missing_Elements_For_Licensor__c</fullName>
        <formula>IF( NOT(OR(ISPICKVAL(Status__c , &quot;Under Review&quot;), ISPICKVAL(Status__c , &quot;Approved By Manager&quot;))), &quot;Status Incorrect - &quot;, &quot;&quot;) 
&amp; 
IF ( Fee_Paid__c = FALSE, &quot;Fee Not Paid - &quot;, &quot;&quot;) 
&amp; 
IF ( AND ( Approved_by_Manager__c = FALSE, OR( RecordType.Name = &quot;FCC New License&quot; , AND ( RecordType.Name = &quot;FCC Renewal&quot;, TODAY() &gt;= Provider__r.Renewal_date__c +  Provider__r.Config_Record__r.FCC_Renewal_Significant_Delay__c  ), Assigned_To__r.Need_Supervisor_Approval__c = TRUE, Other_Condition__c = TRUE)), &quot;Need Manager Approval - &quot;, &quot;&quot; ) 
&amp; 
IF( OR( RecordType.Name = &quot;FCC New License&quot; , RecordType.Name = &quot;FCC Renewal&quot;, RecordType.Name = &quot;FCC License Upgrade&quot;), 
IF(ISBLANK( License_Expiration_Date__c), &quot;License Expiration Date not filled - &quot;,&quot;&quot;) 
&amp; 
IF( ISBLANK( License_Issue_Date__c ), &quot;License Issue Date not filled - &quot;,&quot;&quot;)
&amp;
IF ( ISPICKVAL(License_Requested__c ,&quot;&quot;), &quot;License Requested not filled - &quot;,&quot;&quot;) 
&amp; 
IF(  ISPICKVAL( License_Type__c ,&quot;&quot;), &quot;License Type not filled - &quot;,&quot;&quot;),&quot;&quot;
)
&amp;
IF (  Document_Information_Missing__c = TRUE, &quot;Document or Information missing - &quot;,&quot;&quot;)

&amp; 

IF( OR( RecordType.Name = &quot;FCC New License&quot; , RecordType.Name = &quot;FCC Renewal&quot;, RecordType.Name = &quot;FCC License Upgrade&quot;), 

IF( Training_Review__c = FALSE, &quot;Exp. / Training Not Reviewed - &quot;, &quot;&quot;) 

,&quot;&quot;) 

&amp; 

IF( OR( RecordType.Name = &quot;FCC New License&quot; , RecordType.Name = &quot;FCC Renewal&quot;, RecordType.Name = &quot;FCC License Upgrade&quot;, RecordType.Name = &quot;Change of Address&quot;), 

IF( ISBLANK(Licensee_CORI_Reception_Date__c ), &quot;Licensee CORI Missing - &quot;, &quot;&quot;)
&amp; 
IF( ISBLANK(SORI_Reception_Date__c ), &quot;SORI Missing - &quot;, &quot;&quot;)
&amp;
IF( ISBLANK(Licensee_DCF_Reception_Date__c ), &quot;Licensee DCF Missing - &quot;, &quot;&quot;) 
&amp;
IF( Associated_Visit__c = FALSE, &quot;No Attached Visit - &quot;, &quot;&quot;),
&quot;&quot;)
&amp;

IF( OR( RecordType.Name = &quot;FCC New License&quot; , RecordType.Name = &quot;FCC Renewal&quot;, RecordType.Name = &quot;FCC License Upgrade&quot;, RecordType.Name = &quot;Change of Address&quot;, RecordType.Name = &quot;FCC Change of Household&quot;),

IF( Other_Persons_CORI_Received__c = FALSE, &quot;On Premise Persons CORI Missing - &quot;, &quot;&quot;)
&amp;
IF( Other_Persons_DCF_Received__c = FALSE, &quot;On Premise Persons DCF Missing - &quot;, &quot;&quot;)
,&quot;&quot;)

&amp; 

IF( AND( OR( RecordType.Name = &quot;FCC New License&quot; , RecordType.Name = &quot;FCC Renewal&quot;, RecordType.Name = &quot;FCC License Upgrade&quot;, RecordType.Name = &quot;Change of Address&quot;, RecordType.Name = &quot;FCC Change Room / Floor Level&quot;), Indoor_Outdoor_Space_Review__c = FALSE), &quot;Indoor / Outdoor Space Not Reviewed - &quot;, &quot;&quot;) 
&amp; 

IF( Other_Info_Reviewed__c = FALSE, &quot;Other Info Not Reviewed - &quot;, &quot;&quot;) 

&amp; 

IF( AND( OR( RecordType.Name = &quot;FCC New License&quot; , RecordType.Name = &quot;FCC Renewal&quot;, RecordType.Name = &quot;FCC License Upgrade&quot;, RecordType.Name = &quot;Change of Address&quot;, RecordType.Name = &quot;FCC Change Room / Floor Level&quot;, RecordType.Name = &quot;FCC Change of Household&quot;), AND( No_Condition_Flag__c = FALSE, Condition_Added__c = FALSE)), &quot;Conditions Not Finalized&quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>If not empty, then work remains on this transaction to be ready to be closed or picked up by Admin staff to issue a license / close.</inlineHelpText>
        <label>Missing Elements For Licensor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Missing_to_move_to_Under_Review__c</fullName>
        <description>This field is created replacing formula field &quot;Missing_to_move_to_Under_Review__c&quot;.</description>
        <label>Missing to move to Under Review</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Moving_Date__c</fullName>
        <label>Moving Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Multi_Age_Group_Capacity__c</fullName>
        <description>Multi-Age Group (birth - 14 yrs.)</description>
        <inlineHelpText>Multi-Age Group (birth - 14 yrs.)</inlineHelpText>
        <label>Multi-Age Group Capacity</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Name_of_contract_administrator__c</fullName>
        <label>Name of contract administrator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nb_Hhold_Mbr_with_BRC_Consent_Complete__c</fullName>
        <label>Nb Hhold Mbr with BRC Consent Complete</label>
        <summaryFilterItems>
            <field>Household_Member__c.BRC_Consent_Status__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </summaryFilterItems>
        <summaryForeignKey>Household_Member__c.Licensing_Transactions__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Nb_Hhold_Mbr_with_BRC_OK__c</fullName>
        <label>Nb Hhold Mbr with BRC OK</label>
        <summaryFilterItems>
            <field>Household_Member__c.BRC_Done__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Household_Member__c.Licensing_Transactions__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Nb_Hhold_Mbr_with_CORI_Result__c</fullName>
        <description>Roll up summary to count the number of HH Member with CORI Reception Date not NULL</description>
        <inlineHelpText>Roll up summary to count the number of HH Member with CORI Reception Date not NULL</inlineHelpText>
        <label>Nb Hhold Mbr with CORI Result</label>
        <summaryFilterItems>
            <field>Household_Member__c.CORI_Reception_Date__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>Household_Member__c.Licensing_Transactions__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Nb_Hhold_Mbr_with_DCF_Result__c</fullName>
        <description>Roll up summary to count the number of HH members with DCF Reception Date not NULL</description>
        <inlineHelpText>Roll up summary to count the number of HH members with DCF Reception Date not NULL</inlineHelpText>
        <label>Nb Hhold Mbr with DCF Result</label>
        <summaryFilterItems>
            <field>Household_Member__c.DCF_Reception_Date__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>Household_Member__c.Licensing_Transactions__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Need_Assist_to_Barricade_Heating_Units__c</fullName>
        <description>Need Assistance  to Barricade Heating Units?</description>
        <label>Need Assist. to Barricade Heating Units?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Need_Manager_Approval__c</fullName>
        <label>Need Manager Approval</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NewUmbrella_Alternate_Phone__c</fullName>
        <description>Alternate Phone of the new umbrella that provider can request for new license transaction.</description>
        <label>Alternate Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>NewUmbrella_City__c</fullName>
        <description>City of the new umbrella that provider can request for new license transaction.</description>
        <label>City</label>
        <length>28</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NewUmbrella_Date_of_Incorporation__c</fullName>
        <description>Date of Incorporation of the new umbrella that provider can request for new license transaction.</description>
        <label>Date of Incorporation</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NewUmbrella_Director_Email__c</fullName>
        <description>Director Email of the new umbrella that provider can request for new license transaction.</description>
        <label>Director Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>NewUmbrella_Director_First_Name__c</fullName>
        <description>Director First Name of the new umbrella that provider can request for new license transaction.</description>
        <label>Director First Name</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NewUmbrella_Director_Last_Name__c</fullName>
        <description>Director Last Name of the new umbrella that provider can request for new license transaction.</description>
        <label>Director Last Name</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NewUmbrella_Director_Phone__c</fullName>
        <description>Director Phone of the new umbrella that provider can request for new license transaction.</description>
        <label>Director Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>NewUmbrella_Director_Title__c</fullName>
        <description>Director Title of the new umbrella that provider can request for new license transaction.</description>
        <label>Director Title</label>
        <length>64</length>
        <type>Text</type>
    </fields>
</CustomObject>